kubernetes/k3s-prod-a/homeassistant/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      containers:
        - name: homeassistant
          image: docker.io/linuxserver/homeassistant:2025.1.2@sha256:dfc3575a773a19cef0589788dc0fd33a049a6b23e1b186d36215e41c85d28d90
          startupProbe:
            httpGet:
              path: /manifest.json
              port: 8123
            periodSeconds: 30
            failureThreshold: 10
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - name: homeassistant-config
              mountPath: /config
      volumes:
        - name: homeassistant-config
          persistentVolumeClaim:
            claimName: homeassistant-config
